<resources>
    <string name="app_name">Music Player</string>
    <string name="sign_in">Đăng nhập</string>
    <string name="enter_your_email">Nhập email của bạn</string>
    <string name="enter_your_password">Nhập mật khẩu của bạn</string>
    <string name="forgot_password">Quên mật khẩu</string>
    <string name="sign_up">Đăng ký</string>
    <string name="continue_txt">Tiếp tục</string>
    <string name="enter_your_name">Nhập tên của bạn</string>
    <string name="back">Quay lại</string>
    <string name="library">Thư viện</string>
    <string name="explore">Khám phá</string>
    <string name="rank">Xếp hạng</string>
    <string name="personal">Cá nhân</string>
    <string name="favourite">Yêu thích</string>
    <string name="dowloaded">Đã tải</string>
    <string name="upload">Upload</string>
    <string name="listenRecently">Gần đây</string>
    <string name="view_all">Xem tất cả</string>
    <string name="song_listen_recently">Bài hát nghe gần đây</string>
    <string name="song">bài hát</string>
    <string name="your_playlist">Playlist của bạn</string>
    <string name="create_playlist">Tạo playlist</string>
    <string name="favourite_song">Bài hát yêu thích</string>
    <string name="play_randomly">Phát ngẫu nhiên</string>
    <string name="filter">Lọc</string>
    <string name="newest">Mới nhất</string>
    <string name="oldest">Cũ nhất</string>
    <string name="song_name_a_z">Tên bài hát (A-Z)</string>
    <string name="artist_name_a_z">Tên nghệ sĩ (A-Z)</string>
    <string name="sort_by">Sắp xếp theo</string>
    <string name="filter_by">Lọc theo</string>
    <string name="artist">Nghệ sĩ</string>
    <string name="filter_by_artist">Lọc theo nghệ sĩ</string>
    <string name="apply">Áp dụng</string>
    <string name="download">Tải xuống</string>
    <string name="add_to_favourite_list">Thêm vào danh sách yêu thích</string>
    <string name="added_to_favourite_list">Đã thêm vào danh sách yêu thích</string>
    <string name="add_to_playlist">Thêm vào playlist</string>
    <string name="play_next">Phát kế tiếp</string>
    <string name="hide_song">Ẩn bài hát</string>
    <string name="no_app_found_to_handle_the_share_action">Không tìm thấy ứng dụng nào để xử lý hành động chia sẻ</string>
    <string name="can_t_download_the_song_to_cache">Không thể tải bài hát vào bộ nhớ cache</string>
    <string name="download_successfully">Tải xuống thành công</string>
    <string name="download_failed">Tải xuống thất bại</string>
    <string name="add_song_to_playlist">Thêm bài hát vào playlist</string>
    <string name="widget_description">Quick access to your media controls.</string>
    <string name="now_playing">Now Playing</string>
    <string name="sleep_timer">Hẹn giờ tắt</string>
    <string name="_5_minutes">5 phút</string>
    <string name="_10_minutes">10 phút</string>
    <string name="_15_minutes">15 phút</string>
    <string name="_30_minutes">30 phút</string>
    <string name="_40_minutes">40 phút</string>
    <string name="end_of_track">Phát đến cuối</string>
    <string name="custom">Tuỳ chỉnh</string>
    <string name="turn_off">Tắt</string>
    <string name="left">còn lại</string>
    <string name="another_option">Tuỳ chọn khác</string>
    <string name="cancel">HUỶ</string>
    <string name="save">LƯU</string>
    <string name="please_select_a_time">Vui lòng chọn thời gian</string>
    <string name="queue">Hàng đợi</string>
    <string name="write_a_comment">Nhập bình luận</string>
    <string name="no_comment_found">Không có bình luận nào</string>
    <string name="comment">bình luận</string>
    <string name="comment_cannot_be_empty">Bình luận không thể để trống</string>
    <string name="added_to_next_play">Đã thêm vào danh sách phát kế tiếp</string>
    <string name="delete_from_this_playlist">Xóa khỏi playlist này</string>
    <string name="delete_successfully">Xóa thành công</string>
    <string name="delete_failed">Xóa thất bại</string>
    <string name="listen_recently">Nghe gần đây</string>
    <string name="song_cap">Bài hát</string>
    <string name="playlist">Playlist</string>
    <string name="enter_playlist_name">Nhập tên playlist</string>
    <string name="please_enter_playlist_name">Vui lòng nhập tên playlist</string>
    <string name="please_enter_your_name">Vui lòng nhập tên của bạn</string>
    <string name="upgrade_account">Nâng cấp tài khoản</string>
    <string name="listen_high_quality_music">Nghe nhạc chất lượng cao</string>
    <string name="unlock_all_songs">Mở khoá tất cả bài hát</string>
    <string name="no_ads">Không quảng cáo</string>
    <string name="general">Chung</string>
    <string name="hidden_song">Bài hát đã ẩn</string>
    <string name="language">Ngôn ngữ</string>
    <string name="share_app">Chia sẻ ứng dụng</string>
    <string name="rate_app">Đánh giá ứng dụng</string>
    <string name="policy">Chính sách bảo mật</string>
    <string name="sign_out">Đăng xuất</string>
    <string name="please_rate_us">Vui lòng đánh giá chúng tôi</string>
    <string name="not_now">Quay lại</string>
    <string name="rate_us">Gửi</string>
    <string name="if_you_enjoy_our_music_player_would_you_mind_rating_us_on_the_google_play_then">Nếu bạn thích ứng dụng của chúng tôi, bạn có thể đánh giá chúng tôi trên Google Play không?</string>
    <string name="your_opinion">Đánh giá của bạn</string>
    <string name="other">Khác</string>
    <string name="add_widget">Thêm widget</string>
    <string name="privacy_policy">Chính sách và bảo mật</string>
    <string name="step_1">Bước 1</string>
    <string name="step_2">Bước 2</string>
    <string name="step_3">Bước 3</string>
    <string name="step_4">Bước 4</string>
    <string name="add_widget_guide_description_1">Nhấn và giữ vùng trống ở màn hình</string>
    <string name="add_widget_guide_description_2">Chọn widget</string>
    <string name="add_widget_guide_description_3">Tìm đến Music Player</string>
    <string name="add_widget_guide_description_4">Di chuyển đến trang chủ</string>
    <string name="next">Tiếp theo</string>
    <string name="got_it">Hoàn thành</string>
    <string name="you_need_to_select_language">Bạn cần chọn ngôn ngữ</string>
    <string name="rename">Đổi tên</string>
    <string name="grant_permission">Cấp quyền</string>
    <string name="please_grant_all_permissions">Vui lòng cấp tất cả quyền</string>
    <string name="go_to_setting">Đi đến cài đặt</string>
    <string name="search">Tìm kiếm</string>
    <string name="no_song_found">Không có bài hát nào</string>
    <string name="unhide">Bỏ ẩn</string>
    <string name="unhide_songs_successfully">Bỏ ẩn bài hát thành công</string>
    <string name="no_song">Không có bài hát</string>
    <string name="song_for_you">Gợi ý cho bạn</string>
    <string name="chill">Chill</string>
    <string name="share_playlist">Chia sẻ playlist</string>
    <string name="delete_playlist">Xoá playlist</string>
    <string name="view">Lượt xem</string>
    <string name="by_favourite">Lượt thích</string>
    <string name="no_data">Chưa có dữ liệu</string>
    <string name="downloaded_song">Bài hát đã tải</string>
</resources>