<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dialog"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/_13sdp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/create_playlist"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginTop="@dimen/_13sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:background="#2E3849" />

        <EditText
            android:id="@+id/et_playlist_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/bg_dialog_edittext"
            android:fontFamily="@font/nunito_regular"
            android:hint="@string/enter_playlist_name"
            android:paddingHorizontal="@dimen/_13sdp"
            android:paddingVertical="@dimen/_10sdp"
            android:textColor="@color/white"
            android:textColorHint="#AFAFAF"
            android:textSize="@dimen/_13ssp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/rl_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_weight="1"
                android:background="@drawable/bg_gray_button"
                android:paddingVertical="@dimen/_10sdp">

                <com.kma.musicplayerv2.ui.customview.MovableText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/nunito_semibold"
                    android:text="@string/cancel"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_save"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_purple_button"
                android:paddingVertical="@dimen/_10sdp">

                <com.kma.musicplayerv2.ui.customview.MovableText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/nunito_semibold"
                    android:text="@string/save"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp" />

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>
</layout>