<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/auth_bg"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/_13sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_106sdp"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="@dimen/_40ssp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_38sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:background="@drawable/bg_auth_text_input"
            android:gravity="center_vertical"
            android:paddingHorizontal="@dimen/_12sdp">

            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/email_ic" />

            <View
                android:layout_width="@dimen/_1sdp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginVertical="@dimen/_5sdp"
                android:background="#4B4F58" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:fontFamily="@font/nunito_regular"
                android:hint="@string/enter_your_email"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textColorHint="#787B82"
                android:textSize="@dimen/_13ssp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_38sdp"
            android:layout_marginTop="@dimen/_13sdp"
            android:background="@drawable/bg_auth_text_input"
            android:gravity="center_vertical"
            android:paddingHorizontal="@dimen/_12sdp">

            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/password_ic" />

            <View
                android:layout_width="@dimen/_1sdp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginVertical="@dimen/_5sdp"
                android:background="#4B4F58" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:fontFamily="@font/nunito_regular"
                android:hint="@string/enter_your_password"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textColorHint="#787B82"
                android:textSize="@dimen/_13ssp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_38sdp"
            android:layout_marginTop="@dimen/_13sdp"
            android:background="@drawable/bg_auth_text_input"
            android:gravity="center_vertical"
            android:paddingHorizontal="@dimen/_12sdp">

            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/user_ic" />

            <View
                android:layout_width="@dimen/_1sdp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginVertical="@dimen/_5sdp"
                android:background="#4B4F58" />

            <EditText
                android:id="@+id/et_username"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:fontFamily="@font/nunito_regular"
                android:hint="@string/enter_your_name"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textColorHint="#787B82"
                android:textSize="@dimen/_13ssp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_38sdp"
            android:layout_marginTop="@dimen/_20sdp">

            <RelativeLayout
                android:id="@+id/rl_back"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_auth_back_btn">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:ellipsize="marquee"
                    android:fontFamily="@font/nunito_bold"
                    android:maxLines="1"
                    android:text="@string/back"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13sdp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_continue"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_weight="1"
                android:background="@drawable/bg_auth_continue_btn">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:ellipsize="marquee"
                    android:fontFamily="@font/nunito_bold"
                    android:maxLines="1"
                    android:text="@string/continue_txt"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13sdp" />

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>
</layout>