<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_bottom_sheet"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/_13sdp">

        <ImageView
            android:layout_width="@dimen/_34sdp"
            android:layout_height="@dimen/_3sdp"
            android:background="@drawable/bg_handler_bottomsheet" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_13sdp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_queue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/queue"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/_13ssp" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_song_queue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_7sdp"
            android:layout_marginHorizontal="@dimen/_7sdp"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/rl_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_weight="1"
                android:background="@drawable/bg_gray_button"
                android:paddingVertical="@dimen/_10sdp">

                <com.kma.musicplayerv2.ui.customview.MovableText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/nunito_semibold"
                    android:text="@string/cancel"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_save"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_purple_button"
                android:paddingVertical="@dimen/_10sdp">

                <com.kma.musicplayerv2.ui.customview.MovableText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/nunito_semibold"
                    android:text="@string/save"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp" />

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>
</layout>